@@ -409,6 +409,58 @@ argument_list|>
 argument_list|>
 argument_list|()
 decl_stmt|;
+specifier|protected
+name|int
+name|taskTag
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|NO_TAG
+init|=
+literal|0
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|COMMON_JOIN
+init|=
+literal|1
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|CONVERTED_MAPJOIN
+init|=
+literal|2
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|CONVERTED_LOCAL_MAPJOIN
+init|=
+literal|3
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|BACKUP_COMMON_JOIN
+init|=
+literal|4
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|LOCAL_MAPJOIN
+init|=
+literal|5
+decl_stmt|;
 comment|// Descendants tasks who subscribe feeds from this task
 specifier|protected
 specifier|transient
@@ -505,6 +557,12 @@ argument_list|,
 name|Long
 argument_list|>
 argument_list|()
+expr_stmt|;
+name|taskTag
+operator|=
+name|Task
+operator|.
+name|NO_TAG
 expr_stmt|;
 block|}
 specifier|public
@@ -1822,6 +1880,30 @@ name|conf
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+specifier|public
+name|int
+name|getTaskTag
+parameter_list|()
+block|{
+return|return
+name|taskTag
+return|;
+block|}
+specifier|public
+name|void
+name|setTaskTag
+parameter_list|(
+name|int
+name|taskTag
+parameter_list|)
+block|{
+name|this
+operator|.
+name|taskTag
+operator|=
+name|taskTag
+expr_stmt|;
 block|}
 block|}
 end_class
