@@ -845,6 +845,40 @@ argument_list|(
 literal|null
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|currTask
+operator|.
+name|getTaskTag
+argument_list|()
+operator|==
+name|Task
+operator|.
+name|CONVERTED_MAPJOIN
+condition|)
+block|{
+name|localTask
+operator|.
+name|setTaskTag
+argument_list|(
+name|Task
+operator|.
+name|CONVERTED_LOCAL_MAPJOIN
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|localTask
+operator|.
+name|setTaskTag
+argument_list|(
+name|Task
+operator|.
+name|LOCAL_MAPJOIN
+argument_list|)
+expr_stmt|;
+block|}
 comment|//replace the map join operator to local_map_join operator in the operator tree
 comment|//and return all the dummy parent
 name|List
