@@ -463,10 +463,14 @@ block|}
 else|else
 block|{
 comment|// run the map join task
-name|resTsks
-operator|.
-name|add
-argument_list|(
+name|Task
+argument_list|<
+name|?
+extends|extends
+name|Serializable
+argument_list|>
+name|task
+init|=
 name|ctx
 operator|.
 name|getAliasToTask
@@ -476,6 +480,38 @@ name|get
 argument_list|(
 name|bigTableAlias
 argument_list|)
+decl_stmt|;
+comment|//set task tag
+if|if
+condition|(
+name|task
+operator|.
+name|getTaskTag
+argument_list|()
+operator|==
+name|Task
+operator|.
+name|CONVERTED_LOCAL_MAPJOIN
+condition|)
+block|{
+name|task
+operator|.
+name|getBackupTask
+argument_list|()
+operator|.
+name|setTaskTag
+argument_list|(
+name|Task
+operator|.
+name|BACKUP_COMMON_JOIN
+argument_list|)
+expr_stmt|;
+block|}
+name|resTsks
+operator|.
+name|add
+argument_list|(
+name|task
 argument_list|)
 expr_stmt|;
 block|}
